[package]
name = "jvs-packets"
version = "1.0.1"
edition = "2021"
authors = ["robloxxa"]
description = "A crate that provide structures for working with JVS protocols"
license = "MIT OR Apache-2.0"
keywords = ["jvs", "arcade"]
repository = "https://github.com/robloxxa/jvs-packets-rs"

[features]
default = ["jvs", "jvs_modified"]
jvs = []
jvs_modified = []


